--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,9 +72,16 @@
             android:exported="true"
             android:label="消息推送"
             android:process=":message" />
+
         <receiver
             android:name=".receiver.NotificationReceiver"
             android:process=":message" />
+
+        <receiver android:name=".receiver.UpdateToeknReceiver">
+            <intent-filter>
+                <action android:name="com.xhy.weibo.UPDATE_TOKEN" />
+            </intent-filter>
+        </receiver>
 
         <activity
             android:name=".activity.LoginActivity"
