--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,12 +9,18 @@ android {
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
-        versionName "1.0"
+        versionName "v1.1"
+
+        multiDexEnabled true
     }
     buildTypes {
         release {
+            buildConfigField 'String', 'BASE_URL', '"https://weibo.xhy.hk/weibo"'
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            buildConfigField 'String', 'BASE_URL', '"https://weibo.xhy.hk/weibo"'
         }
     }
 }
@@ -30,7 +36,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.jakewharton:butterknife:8.0.1'
-    compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.mcxiaoke.volley:library:1.0.19'
     compile 'com.github.bumptech.glide:volley-integration:1.4.0'
     compile 'com.getbase:floatingactionbutton:1.10.1'
@@ -40,4 +45,12 @@ dependencies {
 
     compile 'net.qiujuer.genius:ui:2.0.0-beta4'
     compile 'net.qiujuer.genius:res:2.0.0-beta4'
+
+    compile 'com.google.code.gson:gson:2.6.2'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile "com.squareup.retrofit2:converter-gson:2.0.2"
+    compile 'com.squareup.okhttp:okhttp:2.4.0'
+
+    compile 'com.android.support:multidex:1.0.0'
+
 }
