--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,14 @@ android {
             buildConfigField 'String', 'BASE_URL', '"https://weibo.xhy.hk/weibo"'
         }
     }
+    lintOptions {
+        abortOnError false
+    }
+    dexOptions {
+        incremental = true;
+        preDexLibraries = false
+        javaMaxHeapSize "4g" // 2g should be also OK
+    }
 }
 apply plugin: 'com.neenbedankt.android-apt'
 
