--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,8 @@ dependencies {
 
     compile 'com.android.support:multidex:1.0.0'
 
+    //BugHd
+    compile 'im.fir:fir-sdk:latest.integration@aar'
 
     //common
     compile 'com.bobomee.android:common:1.3.3'
