--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,12 @@
 org.gradle.daemon=true
 org.gradle.parallel=true
 org.gradle.jvmargs=-Xmx2048m
+
+COMPILE_SDK_VERSION=23
+BUILD_TOOLS_VERSION=23.0.3
+MIN_SDK_VERSION=14
+TARGET_SDK_VERSION=23
+
+VERSION_NAME=0.0.11-alpha
+VERSION_CODE=2
+GROUP=org.blankapp
