--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,6 @@ dependencies {
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.jakewharton:butterknife:8.0.1'
     compile 'com.mcxiaoke.volley:library:1.0.19'
-    compile 'com.github.bumptech.glide:volley-integration:1.4.0'
     compile 'com.getbase:floatingactionbutton:1.10.1'
     compile 'com.github.chrisbanes:PhotoView:1.2.6'
     compile 'de.hdodenhof:circleimageview:1.3.0'
@@ -58,9 +57,10 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile "com.squareup.retrofit2:converter-gson:2.0.2"
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.github.bumptech.glide:okhttp3-integration:1.4.0@aar'
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
 
-    compile 'com.android.support:multidex:1.0.0'
 
     //BugHd
     compile 'im.fir:fir-sdk:latest.integration@aar'
@@ -70,5 +70,5 @@ dependencies {
 
     //框架工具
     compile project(':android-common')
-    compile project(':BlackApp')
+//    compile project(':BlackApp')
 }
