--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,8 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
 
 
+    compile 'org.greenrobot:eventbus:3.0.0'
+
     //BugHd
     compile 'im.fir:fir-sdk:latest.integration@aar'
 
