Upgrade new Activity about Settings, but it is the primary function

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.xhy.weibo">
+
     <meta-data
         android:name="com.bumptech.glide.integration.okhttp.OkHttpGlideModule"
         android:value="GlideModule" />
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <!-- 可选 -->
-    <uses-permission android:name="android.permission.GET_TASKS"></uses-permission>
+    <uses-permission android:name="android.permission.GET_TASKS" />
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
@@ -82,7 +83,6 @@
         <receiver
             android:name=".receiver.NotificationReceiver"
             android:process=":message" />
-
         <receiver android:name=".receiver.UpdateToeknReceiver">
             <intent-filter>
                 <action android:name="com.xhy.weibo.UPDATE_TOKEN" />
@@ -96,21 +96,12 @@
             </intent-filter>
         </receiver>
 
-
         <activity
             android:name=".ui.activity.LoginActivity"
             android:label="@string/title_activity_login" />
-
-        <activity android:name=".ui.activity.RegisterActivity"
-            android:theme="@style/Translucent" />
-
         <activity
-            android:name=".ui.activity.SettingsActivity"
-            android:label="@string/title_activity_settings">
-
-        </activity>
-
-
+            android:name=".ui.activity.RegisterActivity"
+            android:theme="@style/Translucent" />
 
         <receiver android:name=".receiver.NetWorkReceiver">
             <intent-filter>
@@ -121,6 +112,11 @@
         <meta-data
             android:name="BUG_HD_SDK_GENERAL_KEY"
             android:value="84b29f55d617c14d9f09248ead1ced2d" />
+
+        <activity
+            android:name=".ui.activity.SettingActivity"
+            android:label="@string/title_activity_setting"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
