--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,20 @@ android {
         versionName rootProject.ext.android["versionName"]
 
         multiDexEnabled true
+
+        ndk {
+            //选择要添加的对应cpu类型的.so库。
+            abiFilters 'armeabi', 'armeabi-v7a', 'armeabi-v8a', 'x86', 'x86_64'
+            // 还可以添加 , 'mips', 'mips64'
+        }
+
+        manifestPlaceholders = [
+                JPUSH_PKGNAME : applicationId,
+                JPUSH_APPKEY : "ab23b913c2726818bf2a9c6a", //JPush上注册的包名对应的appkey.
+                JPUSH_CHANNEL : "developer-default", //暂时填写默认值即可.
+        ]
     }
+
     buildTypes {
         release {
             buildConfigField 'String', 'BASE_URL', '"https://weibo.xhy.hk/weibo"'
@@ -31,49 +44,66 @@ android {
     lintOptions {
         abortOnError false
     }
+    signingConfigs {
+        /**
+         * 设置你的keystore相关
+         * demo中只是一个示例，使用时请根据实际情况进行配置
+         */
+        debug {
+            //keystore中key的别名
+            keyAlias 'debug'
+            //keystore中key的密码
+            keyPassword '19940531'
+            //keystore的文件路径，可以是绝对路径也可以是相对路径
+            storeFile file('/Users/xuhaoyang/Android/key/debug.jks')
+            //keystore的密码
+            storePassword '19940531'
+        }
+    }
 
+    compileOptions {
+    }
 }
 apply plugin: 'com.neenbedankt.android-apt'
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-
     compile rootProject.ext.dependencies["support-v7"]
     compile rootProject.ext.dependencies["support-v4"]
     compile rootProject.ext.dependencies["design"]
     compile rootProject.ext.dependencies["cardview"]
-
     compile rootProject.ext.dependencies["retrofit2"]
     compile rootProject.ext.dependencies["retrofit2-gson"]
     compile rootProject.ext.dependencies["gson"]
-
     compile rootProject.ext.dependencies["okhttp3"]
     compile rootProject.ext.dependencies["okhttp3-logging"]
     compile rootProject.ext.dependencies["eventbus"]
     compile rootProject.ext.dependencies["glide"]
     compile rootProject.ext.dependencies["glide-okhttp"]
-
     compile rootProject.ext.dependencies["rxjava"]
     compile rootProject.ext.dependencies["rxandroid"]
     compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
-
-
     //框架工具
     compile rootProject.ext.dependencies["android-common"]
-
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
     compile 'com.jakewharton:butterknife:8.0.1'
-
     compile 'com.getbase:floatingactionbutton:1.10.1'
     compile 'com.github.chrisbanes:PhotoView:1.2.6'
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'net.qiujuer.genius:ui:2.0.0-beta4'
     compile 'net.qiujuer.genius:res:2.0.0-beta4'
-
     //BugHd
-    compile 'im.fir:fir-sdk:latest.integration@aar'
-
+//    compile 'im.fir:fir-sdk:latest.integration@aar'
     compile 'org.apache.httpcomponents:httpmime:4.2.5'
+    //高德定位
+    compile 'com.amap.api:location:3.4.1'
+    compile 'com.amap.api:map2d:5.2.0'
+    compile 'com.amap.api:search:5.2.1'
+    // android高版本权限请求rx
+    compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.4@aar'
 
+
+    compile 'cn.jiguang.sdk:jpush:3.0.8'
+    compile 'cn.jiguang.sdk:jcore:1.1.6'
 }
