--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         debug {
-            buildConfigField 'String', 'BASE_URL', '"https://weibo.xhy.hk/weibo"'
+            buildConfigField 'String', 'BASE_URL', '"http://192.168.1.176"'
             debuggable true
         }
     }
