--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,7 @@ android {
     compileOptions {
     }
 }
-apply plugin: 'com.neenbedankt.android-apt'
+//apply plugin: 'com.neenbedankt.android-apt'
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
@@ -86,7 +86,7 @@ dependencies {
     compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     //框架工具
     compile rootProject.ext.dependencies["android-common"]
-    apt 'com.jakewharton:butterknife-compiler:8.0.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.0.1'
     compile 'com.jakewharton:butterknife:8.0.1'
     compile 'com.getbase:floatingactionbutton:1.10.1'
     compile 'com.github.chrisbanes:PhotoView:1.2.6'
