fix User icon and name, simplify message

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -210,7 +210,11 @@
             android:enabled="true"
             android:exported="true"
             android:label="消息推送"
-            android:process=":message" />
+            android:process=":message" >
+            <intent-filter>
+                <action android:name="com.xhy.weibo.intent.action.MessageService"/>
+            </intent-filter>
+        </service>
 
         <receiver
             android:name=".receiver.NotificationReceiver"
